text overflow fix for card

--- a/src/app/main/event-card/event-card.component.scss
+++ b/src/app/main/event-card/event-card.component.scss
@@ -9,6 +9,10 @@
 
   h1 {
     margin-top: 20px;
+    line-height: 1.2;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
@@ -22,7 +26,12 @@
 
 .location {
   font-size: 1rem;
-  line-height: 1;
+  line-height: 1.2;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card-content {
